Refactor `PvtBuilder` to use `Medicalinfres` API for medical information retrieval and deprecate legacy `OrcaExtraInfo` methods.
- Updated `PvtBuilder` to fetch medical information directly from the `Medicalinfres` API instead of relying on hardcoded data in `OrcaExtraInfo`.
- Deprecated unused fields and methods in `OrcaExtraInfo`, including `getKanricd1012` and `getDbVersion`.
- Enhanced `PvtBuilder` with API-driven mapping of medical code to descriptive names.
- Cleaned up deprecated database query logic and adjusted related logging.